================================ Next release ================================

========================== Release 0.5.8 2014-04-18 ==========================

Bug fixes:
    - Memory leak when making loggers per context-specific logger system, like
      e.g. HTTPConnections or SSHServerTransports.

    - InstanceDependency has been given a ``__hash__`` and ``__eq__`` method
      that delegates to the underlying instance.

    - DependencyMap stays an InstanceDependency but uses the built-in
      ``object`` definitions for its ``__hash__`` and ``__eq__`` methods.

========================== Release 0.5.7 2014-03-24 ==========================

Features:
    - The zookeeper-contrib now accepts a parameter, ``default_encoded_acls``,
      which is expected to be a list of pre-encoded ACLs. This is the
      recommended way of passing default ACLs to clients provided by this
      provider since it doesn't need to know the exact passwords for these
      ACLs, just their base64-encoded hashes.

========================== Release 0.5.6 2013-04-09 ==========================

Bug fixes:
    - A regression in 0.5.5 broke customization of logging.

========================== Release 0.5.5 2013-04-09 ==========================

Bug fixes:
    - Specifying a custom reactor with the "-r"-argument to piped should now
      work again.

Features:
    - The constructor of ``piped.event.Event`` now takes a single keyword
      argument: ``async``, which, if ``True`` makes ``.__call__`` return
      a deferred which callbacks when all the listeners have finished
      processing the event.

========================== Release 0.5.3 2013-01-06 ==========================

Features:
    - New StatsD-contrib that handles one or more statsd-connections, as well
      as a reporter-service for various process metrics.

    - ZooKeeper-contrib now authenticates and creates nodes with default ACLs.

    - ZooKeeper-client learned create_recursive.

